Alle Windows mit NumberField statt TextField